# mail-devil

./: .gitignore  Cargo.toml  README.md
mail-devil/: Cargo.toml
mail-devil/src/: args.rs  main.rs  server.rs  state.rs  types.rs  user_tracker.rs
mail-devil/src/pop3/: copy.rs  handlers.rs  mod.rs  parsers.rs  responses.rs  server.rs  session.rs
mail-devil/src/util/: ascii.rs  mod.rs  sockets.rs
